Fixed jumpy issue on photography page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -798,4 +798,18 @@ $h3FontFamily:	'Quicksand', sans-serif;
 	#graphProjDesc {
 		margin: 5em 0;
 	}
+
+// PHOTOGRAPHY
+
+	.tcsContent {
+		max-height: 2024px;
+	}
+
+	.wbsContent {
+		max-height: 1744px;
+	}
+
+	.fhContent {
+		max-height: 2647px;
+	}
 }
